[gd_scene load_steps=7 format=2]

[ext_resource path="res://paper.jpg" type="Texture" id=1]
[ext_resource path="res://cross-circle-main.gd" type="Script" id=2]
[ext_resource path="res://CCtileset.tres" type="TileSet" id=3]
[ext_resource path="res://x48.png" type="Texture" id=4]
[ext_resource path="res://o48.png" type="Texture" id=5]
[ext_resource path="res://popup.png" type="Texture" id=6]

[node name="cross-circle-main" type="Node2D"]
script = ExtResource( 2 )

[node name="CCControl" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CCNode2D" type="Node2D" parent="CCControl"]

[node name="TextureRect" type="TextureRect" parent="CCControl/CCNode2D"]
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="CCControl/CCNode2D/TextureRect"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 48, 48 )
cell_quadrant_size = 22
format = 1
tile_data = PoolIntArray( 131100, 1, 0, 131103, 0, 0, 196636, 0, 0, 196637, 1, 0, 196638, 0, 0, 262172, 1, 0, 262173, 1, 0, 262174, 1, 0, 262175, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 1, 0, 393245, 0, 0, 393248, 1, 0, 589834, 1, 0, 589835, 0, 0, 655370, 0, 0, 655371, 1, 0, 720905, 0, 0 )

[node name="SpriteX" type="Sprite" parent="CCControl/CCNode2D/TextureRect/TileMap"]
visible = false
position = Vector2( 56, 48 )
texture = ExtResource( 4 )

[node name="SpriteO" type="Sprite" parent="CCControl/CCNode2D/TextureRect/TileMap"]
visible = false
position = Vector2( 40, 166 )
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="CCControl/CCNode2D/TextureRect"]
position = Vector2( 276, 276 )
scale = Vector2( 0.39375, 0.7 )
texture = ExtResource( 1 )

[node name="CheckBoxPlay" type="CheckBox" parent="CCControl/CCNode2D"]
margin_left = 896.0
margin_top = 64.0
margin_right = 952.0
margin_bottom = 120.0
hint_tooltip = "Click to change
your symbol"
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked = ExtResource( 4 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="CCControl/CCNode2D"]
margin_left = 896.0
margin_top = 504.0
margin_right = 978.0
margin_bottom = 524.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndButton" type="Button" parent="CCControl/CCNode2D"]
margin_left = 896.0
margin_top = 552.0
margin_right = 978.0
margin_bottom = 572.0
text = "End Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CredentialsButton" type="Button" parent="CCControl"]
margin_left = 768.0
margin_top = 552.0
margin_right = 852.0
margin_bottom = 572.0
text = "Credentials"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewPopup" type="Popup" parent="CCControl"]
margin_left = 880.0
margin_top = 484.0
margin_right = 1008.0
margin_bottom = 548.0

[node name="TextureRect" type="TextureRect" parent="CCControl/NewPopup"]
margin_right = 128.0
margin_bottom = 64.0
texture = ExtResource( 6 )

[node name="NewOKButton" type="Button" parent="CCControl/NewPopup"]
margin_left = 16.0
margin_top = 20.0
margin_right = 47.0
margin_bottom = 40.0
text = "OK"

[node name="NewCancelButton" type="Button" parent="CCControl/NewPopup"]
margin_left = 56.0
margin_top = 20.0
margin_right = 110.0
margin_bottom = 40.0
text = "Cancel"

[node name="EndPopup" type="Popup" parent="CCControl"]
margin_left = 880.0
margin_top = 530.0
margin_right = 1008.0
margin_bottom = 592.0

[node name="TextureRect" type="TextureRect" parent="CCControl/EndPopup"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="EndOKButton" type="Button" parent="CCControl/EndPopup"]
margin_left = 16.0
margin_top = 22.0
margin_right = 47.0
margin_bottom = 42.0
text = "OK"

[node name="EndCancelButton" type="Button" parent="CCControl/EndPopup"]
margin_left = 56.0
margin_top = 22.0
margin_right = 110.0
margin_bottom = 42.0
text = "Cancel"
[connection signal="mouse_entered" from="CCControl/CCNode2D/CheckBoxPlay" to="." method="_on_CheckBoxPlay_mouse_entered"]
[connection signal="mouse_exited" from="CCControl/CCNode2D/CheckBoxPlay" to="." method="_on_CheckBoxPlay_mouse_exited"]
[connection signal="pressed" from="CCControl/CCNode2D/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="CCControl/CCNode2D/EndButton" to="." method="_on_EndButton_pressed"]
[connection signal="pressed" from="CCControl/CredentialsButton" to="." method="_on_CredentialsButton_pressed"]
[connection signal="pressed" from="CCControl/NewPopup/NewOKButton" to="." method="_on_NewOKButton_pressed"]
[connection signal="pressed" from="CCControl/NewPopup/NewCancelButton" to="." method="_on_NewCancelButton_pressed"]
[connection signal="pressed" from="CCControl/EndPopup/EndOKButton" to="." method="_on_EndOKButton_pressed"]
[connection signal="pressed" from="CCControl/EndPopup/EndCancelButton" to="." method="_on_EndCancelButton_pressed"]
